[package]
name = "shards"
description = "rust bindings and utility in order to use shards"
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
approx = "0.5.0"
lazy_static = "1.4.0"
compile-time-crc32 = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.64" }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"], optional = true }
libsecp256k1 = { version = "0.7.0", optional = true }
hex = { version = "0.4.2", optional = true }
crossbeam = { version = "0.8.1", optional = true }
rapier3d = { version = "0.11.1", optional = true }
bs58 = { version = "0.4.0", optional = true }
sha2 = { version = "0.10.0", optional = true }
wasabi_leb128 = { version = "0.4.0", optional = true }

resvg = { version = "0.23.0", optional = true }
usvg = { version = "0.23.0", optional = true }
# svg crates require 0.6.3 for now
tiny-skia = { version = "0.6.3", optional = true }

instant = { version = "0.1.10", features = [ "now" ] }
ethereum-types = { version = "0.12.0", optional = true }
ethabi = { version = "16.0.0", optional = true }
ext-csv = {  package = "csv", version = "1.1", optional = true }

# can't seem to update those as they crash on windows release builds.....
sp-core = { version = "4.1.0-dev", git = "https://github.com/fragcolor-xyz/substrate.git", tag = 'monthly-2022-01', optional = true }
parity-scale-codec = { version = "2.3.1", default-features = false, optional = true }

chrono = { version = "0.4", optional = true }

chacha20poly1305 = { version = "0.9.0", optional = true }
egui = { version = "0.18.1", optional = true }
egui-gfx = { path = "../src/gfx/egui", optional = true }
half = { version = "2.0.0" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
dlopen = { version = "0.1.8", optional = true }
reqwest = { version = "0.11.0", features = ["blocking"], optional = true }

[target.'cfg(not(any(target_arch="wasm32", target_os="ios")))'.dependencies]
webbrowser = { version = "0.7.1", optional = true }

[dev-dependencies]
ctor = "0.1.16"

[build-dependencies]
bindgen = { version = "0.60.1" }
gfx-build = { path = "../src/gfx/rust/build" }

[features]
default = []
dummy = []
shards = ["reqwest",
          "tiny-keccak",
          "libsecp256k1",
          "hex",
          "rapier3d",
          "crossbeam",
          "webbrowser",
          "bs58",
          "sha2",
          "wasabi_leb128",
          "usvg",
          "resvg",
          "tiny-skia",
          "ethabi",
          "ethereum-types",
          "ext-csv",
          "sp-core",
          "parity-scale-codec",
          "chacha20poly1305",
          "chrono",
          "egui",
          "egui-gfx"]
dllshard = ["dlopen"]
scripting = []

[profile.release]
panic = "abort"
