[package]
name = "shards-egui"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
lazy_static = "1.4.0"
egui = { version = "0.27.2", features = ["persistence"] }
egui_commonmark = { version = "0.15.0" }
egui_dock = { version = "0.12.0" }
egui_extras = { version = "0.27.0" }
egui_memory_editor = { version = "0.2.9" }
egui_plot = { version = "0.27.0" }
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
enum-map = { version = "2.5.0" }
shards = { path = "../rust" }
shards-lang = { path = "../lang" }
pest = "2.7.1"
rmp-serde = { version = "1.1.1" }
compile-time-crc32 = "0.1.2"
nanoid = "0.4.0"
once_cell = "1.9.0"
num-traits = "0.2"

[build-dependencies]
bindgen = "0.69"
gfx-build = { path = "../gfx/rust/build" }
