[package]
name = "shards-egui"
description = ""
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
lazy_static = "1.4.0"
egui = { version = "0.28.1", features = ["persistence"] }
egui_commonmark = { git = "https://github.com/shards-lang/egui_commonmark.git", rev = "1f9796c135a812ae6b0d5c1d29bcd1629459af32", version = "0.17.0", features = ["better_syntax_highlighting"]}
# egui_commonmark = { path = "../../../egui_commonmark/egui_commonmark", version = "0.17.0", features = ["better_syntax_highlighting"]}
egui_dock = { version = "0.13.0" }
egui_extras = { version = "0.28.1", features = ["serde"]}
egui_memory_editor = { version = "0.2.9", git = "https://github.com/shards-lang/egui_memory_editor.git", rev = "5e43457129fd415b827c23370b791ad0c96fab96" }
egui_plot = { version = "0.28.1" }
syntect = { version = "5.0.0", default-features = false, features = [
    "default-fancy",
] }
enum-map = { version = "2.5.0" }
shards = { path = "../rust" }
shards-lang = { path = "../lang" }
pest = "2.7.1"
rmp-serde = { version = "1.1.1" }
compile-time-crc32 = "0.1.2"
nanoid = "0.4.0"
num-traits = "0.2"

[build-dependencies]
bindgen = "0.69"
gfx-build = { path = "../gfx/rust/build" }
