[package]
name = "shards-lang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pest = "2.7.1"
pest_derive = "2.7.1"
flexbuffers = "2.0.0"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
shards = { path = "../rust" }
hex = { version = "0.4.3" }
nanoid = "0.4.0"
clap = { version = "4.4.7", features = ["derive"] }
profiling = { version = "1", default-features = false }
compile-time-crc32 = "0.1.2"
lazy_static = "1.5.0"
dunce = "1.0.4"
once_cell = "1.9.0" 
dashmap = "6.0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.155"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "visionos")))'.dependencies]
ctrlc = "3.4.0"

[features]
default = ["exported"]
exported = []

[build-dependencies]
cbindgen = "0.24.0"
