[package]
name = "shards"
description = "rust bindings and utility in order to use shards"
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Giovanni Petrantoni <sinkingsugar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
approx = "0.5.1"
lazy_static = "1.4.0"
typemap = "*"
compile-time-crc32 = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
half = { version = "2.2.1" }
futures-util = "0.3"
futures = "0.3"
shards-macro = { path = "../rust_macro" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
dlopen = { version = "0.1.8", optional = true }

[dev-dependencies]
ctor = "0.1.26"

[build-dependencies]
bindgen = { version = "0.69.4" }

[features]
dllshard = ["dlopen"]

[profile.release]
panic = "abort"
