[package]
name = "shards-macro"
description = "rust proc macros for shards"
license = "BSD-3-Clause"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.29"
quote = "1.0.33"
proc-macro2 = "1.0.63"
itertools = "0.11.0"
crc = "3.0.1"
lazy_static = "1.5.0"
convert_case = "0.6.0"
